# ai-benchmark-dashboard

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: benchmarks.yml  changelog.jsonl  overrides.yml
data/snapshots/: arc_agi_1.csv  arc_agi_2.csv  epoch_capabilities_index.csv  frontiermath_tier_4.csv  humanities_last_exam.csv  metr_time_horizons_external.csv  mmmu.csv  remote_labor_index.csv  swe_bench_verified.csv  zerobench.csv
docs/: ARCHITECTURE.md  DEPLOY.md
docs/plans/: 2025-01-31-dashboard-redesign-implementation.md  2025-01-31-dashboard-redesign.md
scripts/: init_db.py  update_data.py
src/: __init__.py  config.py
src/cli/: __init__.py  refresh_data.py
src/dashboard/: __init__.py  app.py
src/dashboard/pages/: __init__.py  admin.py  benchmark_explorer.py  data_quality.py  explorer.py  model_explorer.py  overview.py  progress.py  projections.py
src/db/: __init__.py  connection.py  queries.py
src/ingestors/: __init__.py  arc_agi.py  base.py  epoch.py  epoch_capabilities_index.py  frontier_math.py  humanities_last_exam.py  metr.py  mmmu.py  remote_labor_index.py  swe_bench.py  swe_bench_official.py  zerobench.py
src/models/: __init__.py  schemas.py
src/projections/: __init__.py  linear.py  power_law.py  saturation.py
